--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="learning-git-2/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Germania+One" rel="stylesheet"> 
     <title>Song of the day</title>
 </head>
@@ -60,5 +60,6 @@
             </p>
         </div>
     </div>
+    <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
